refactor(typescript): 清理并重构类型相关代码
删除无用的示例文件和旧代码
简化index.ts中的类实现
添加类型工具文档说明

--- a/typescript/装饰器.md
+++ b/typescript/装饰器.md
@@ -49,6 +49,89 @@ class User {
     }
 }
 ```
-
+<!-- 
 其实使用类+方法的方式也可以进行结果，但是装饰器有了更优雅的解决方案。
-使用装饰器类似于接口的方式，装饰器可以不关注内部实现，只使用外部来使用
+使用装饰器类似于接口的方式，装饰器可以不关注内部实现，只使用外部来使用 -->
+装饰器一共有五种：类装饰器、属性装饰器、方法装饰器、参数装饰器、访问器装饰器
+# 类装饰器
+装饰器本身是一个函数，函数参数是一个对象；装饰器返回类型有两种：类或者void
+如果返回类会将传入的类替换掉。
+装饰器的执行是从内部向外部执行的，例如
+```typescript
+@FactoryA("配置A")
+@FactoryB(100)
+@FactoryC(true)
+class MyClass {}
+```
+会先执行FactoryA，然后FactoryB，最后FactoryC，而MyClass会作为参数传入到每个装饰器中。
+
+## 语法使用
+装饰器分为两类：装饰器函数和装饰器工厂函数
+两者的区别是装饰器工厂可以传入参数来实现装饰器的一些功能
+```typescript
+function foo2(path: string) {
+  return function (target: constructor) {
+    console.log("path", path, target);
+  }
+}
+```
+```typescript
+// 装饰器工厂 - 返回装饰器函数
+function Route(path: string) {
+  return function (target: Function) {
+    console.log(`路径: ${path}, 类名: ${target.name}`);
+    // 可以存储路径信息供后续使用
+    Reflect.defineMetadata('routePath', path, target);
+  };
+}
+
+@Route("/api/users")
+class UserController {}
+```
+使用多个装饰器工厂时执行顺序会看起来有些怪：
+```typescript
+function FactoryA(config: string) {
+  console.log("1. FactoryA 工厂函数执行，配置:", config);
+  return function(constructor: Function) {
+    console.log("5. FactoryA 返回的装饰器执行");
+  };
+}
+
+function FactoryB(config: number) {
+  console.log("2. FactoryB 工厂函数执行，配置:", config);
+  return function(constructor: Function) {
+    console.log("4. FactoryB 返回的装饰器执行");
+  };
+}
+
+function FactoryC(config: boolean) {
+  console.log("3. FactoryC 工厂函数执行，配置:", config);
+  return function(constructor: Function) {
+    console.log("6. FactoryC 返回的装饰器执行");
+  };
+}
+
+console.log("0. 类定义前");
+@FactoryA("配置A")
+@FactoryB(100)
+@FactoryC(true)
+class MyClass {}
+console.log("7. 类定义后");
+
+// 实际输出顺序:
+// 0. 类定义前
+// 1. FactoryA 工厂函数执行，配置: 配置A
+// 2. FactoryB 工厂函数执行，配置: 100  
+// 3. FactoryC 工厂函数执行，配置: true
+// 4. FactoryB 返回的装饰器执行
+// 5. FactoryA 返回的装饰器执行
+// 6. FactoryC 返回的装饰器执行
+// 7. 类定义后
+```
+
+具体的情况是会先制定工厂函数，随后在类定义时执行制定装饰器的函数。
+
+# 成员装饰器（属性装饰器、方法装饰器）
+成员装饰器和类装饰器类似，但是多了可以控制原型的方法。
+
+
